# HeadrEval

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  security-headers.py
HeadrEval/: SecurityHeaderChecker.py  core.py  headers_eval.py  main.py  utils.py
data/: user_agents.txt
src/HeadrEval/: SecurityHeaderChecker.py  headers_eval.py  main.py  utils.py
