[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HeadrEval"
dynamic = [
  "version"
]
dependencies = [
    "requests",
    "argparse",
    "termcolor",
    "dataclasses",
]

[project.scripts]
HeadrEval = "HeadrEval.core:main"

[tool.hatch.version]
path = "HeadrEval/__about__.py"