[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HeadrEval"
dynamic = ["version"]
description = "HeadrEval is a command-line tool for evaluating security headers of a given URL"
readme = "README.md"
license = "MIT"
keywords = []
authors = [
  { name = "Schwitzd", email = "me@schwitzd.me" },
]
dependencies = [
    "requests",
    "argparse",
    "termcolor",
    "dataclasses",
]

[project.urls]
Documentation = "https://github.com/Schwitzd/HeadrEval#readme"
Issues = "https://github.com/Schwitzd/HeadrEval/issues"
Source = "https://github.com/Schwitzd/HeadrEval"

[project.scripts]
HeadrEval = "HeadrEval.main:main"

[tool.hatch.version]
path = "src/HeadrEval/__about__.py"